# copilot-rewrite

./: .gitignore  AUDIT.md  BUILD.md  CHANGELOG.md  CLAUDE.md  CONTINUE.md  README.md  SPEC.md  TASK.md  index.html  issues.md  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: release.yml
public/: splashscreen.html
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/autostart/: mod.rs
src-tauri/src/clipboard/: manager.rs  mod.rs
src-tauri/src/copilot/: client.rs  mod.rs  oauth.rs
src-tauri/src/overlay/: mod.rs
src-tauri/src/replacement/: engine.rs  mod.rs
src-tauri/src/selection/: mod.rs  monitor.rs  uia.rs
src-tauri/src/tray/: mod.rs
src/components/: App.tsx  LoginDialog.tsx  Popup.tsx  Preview.tsx  SettingsPanel.tsx  Toolbar.tsx
src/hooks/: useSelection.ts  useTheme.ts  useUpdater.ts
src/styles/: index.css
src/utils/: jsonParser.ts
tests/: jsonParser.test.ts  readModeSeparator.test.ts  test-e2e.ps1
